prevent empty editable elts from collapsing

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -8,3 +8,7 @@
 [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
   display: none !important;
 }
+
+#draftTitle, #draftBody {
+    min-height: 1em;
+}
